--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Sun Sep  7 19:35:04 2003  Tim Janik  <timj@gtk.org>
+
+	* bsemidireceiver.c (check_mono_synth_improvement):
+	fix pointer==enum typo.
+
 Sun Sep  7 15:45:26 2003  Tim Janik  <timj@gtk.org>
 
 	* bsemidireceiver.c (activate_switch_module): fix switch module
