--- a/TODO
+++ b/TODO
@@ -2,6 +2,7 @@ FIXMES:
 - RENAMES: instrument-input + instrument-output,
            midi-input       + midi-controller
 - bse-plugin-generator: Effect->Property structure copies don't work for strings (merely a pointer copy)
+- upon project playback-stop, discard all pending events (at least note-on+note-off) on its midi receiver
 - support records and sequences in bse-plugin-generator and bseprocidl
 - reenable signals i nbseprocidl
 - add dump-include-path option to bse-plugin-generator
