--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Sep 21 16:06:23 2003  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* docs/bse-plugin-generator.1.texi: Added the new options.
+
 Tue Sep 16 16:48:54 2003  Alper Ersoy  <dirt@gtk.org>
 
         * docs/generated/css/default.css: changed file browsing styles to
