--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+Thu Oct  2 23:45:03 2003  Alper Ersoy  <dirt@gtk.org>
+
+	* docs/generated/cgi-bin: new directory, to hold cgi scripts for
+	beast website.
+
+	* docs/generated/cgi-bin/file-browse.cgi:
+	* docs/generated/cgi-bin/file-upload.cgi: simple invocator scripts for
+	Texitheque CGI modules.
+
+	* docs/generated/Makefile.am: updated site rules to also handle new
+	cgi scripts.
+
 Fri Sep 26 22:51:09 2003  Tim Janik  <timj@gtk.org>
 
 	* modified alpers last patch to not use template files.
