--- a/docs/site-links-synthesis.texi
+++ b/docs/site-links-synthesis.texi
@@ -15,74 +15,77 @@
 	@uref{http://www.synthmuseum.com/magazine/linexpo.html,, Linear vs. Exponential}
 @end itemize
 
-Selected @uref{http://www.sospubs.co.uk,,Sound On Sound} Articles:
+Selected @uref{http://www.soundonsound.com,,Sound On Sound} Articles:
 @itemize
 @item Synth School 1997:
-	@uref{http://www.sospubs.co.uk/sos/1997_articles/jun97/synthschool1.html,,Part01}
-	@uref{http://www.sospubs.co.uk/sos/1997_articles/aug97/synthschool2.html,,Part02}
-	@uref{http://www.sospubs.co.uk/sos/1997_articles/sep97/synthschool3.html,,Part03}
-	@uref{http://www.sospubs.co.uk/sos/1997_articles/oct97/synthschool4.html,,Part04}
-	@uref{http://www.sospubs.co.uk/sos/1997_articles/dec97/synthschool5.html,,Part05}
+	@uref{http://www.soundonsound.com/sos/1997_articles/jun97/synthschool1.html,,Part01}
+	@uref{http://www.soundonsound.com/sos/1997_articles/aug97/synthschool2.html,,Part02}
+	@uref{http://www.soundonsound.com/sos/1997_articles/sep97/synthschool3.html,,Part03}
+	@uref{http://www.soundonsound.com/sos/1997_articles/oct97/synthschool4.html,,Part04}
+	@uref{http://www.soundonsound.com/sos/1997_articles/dec97/synthschool5.html,,Part05}
 @item Synth School 1998:
-	@uref{http://www.sospubs.co.uk/sos/feb98/articles/synth.html,,Part06}
-	@uref{http://www.sospubs.co.uk/sos/apr98/articles/synthschool.html,,Part07}
-	@uref{http://www.sospubs.co.uk/sos/jun98/articles/synthschool.html,,Part08}
-	@uref{http://www.sospubs.co.uk/sos/jul98/articles/synthschool9.html,,Part09}
-	@uref{http://www.sospubs.co.uk/sos/aug98/articles/synthschool.html,,Part10}
-	@uref{http://www.sospubs.co.uk/sos/sep98/articles/synthschool.html,,Part11}
-	@uref{http://www.sospubs.co.uk/sos/oct98/articles/synthschool12.html,,Part12}
-@item @uref{http://www.sospubs.co.uk/sos/apr99/articles/20tips.htm,,20 Tips on Synth Programming}
-@item @uref{http://www.sospubs.co.uk/sos/regular_htm/glossary.htm,, SOS Technical Glossary}
+	@uref{http://www.soundonsound.com/sos/feb98/articles/synth.html,,Part06}
+	@uref{http://www.soundonsound.com/sos/apr98/articles/synthschool.html,,Part07}
+	@uref{http://www.soundonsound.com/sos/jun98/articles/synthschool.html,,Part08}
+	@uref{http://www.soundonsound.com/sos/jul98/articles/synthschool9.html,,Part09}
+	@uref{http://www.soundonsound.com/sos/aug98/articles/synthschool.html,,Part10}
+	@uref{http://www.soundonsound.com/sos/sep98/articles/synthschool.html,,Part11}
+	@uref{http://www.soundonsound.com/sos/oct98/articles/synthschool12.html,,Part12}
+@item @uref{http://www.soundonsound.com/sos/apr99/articles/20tips.htm,,20 Tips on Synth Programming}
+@item @uref{http://www.soundonsound.com/information/Glossary.php,, SOS Technical Glossary}
 @item Synth Secrets 1999:
-	@uref{http://www.sospubs.co.uk/sos/may99/articles/synthsec.htm,,Part01}
-	@uref{http://www.sospubs.co.uk/sos/jun99/articles/synthsecrets.htm,,Part02}
-	@uref{http://www.sospubs.co.uk/sos/jul99/articles/synthsecrets.htm,,Part03}
-	@uref{http://www.sospubs.co.uk/sos/aug99/articles/synthsecrets.htm,,Part04}
-	@uref{http://www.sospubs.co.uk/sos/sep99/articles/synthsecrets.htm,,Part05}
-	@uref{http://www.sospubs.co.uk/sos/oct99/articles/synthsecrets.htm,,Part06}
-	@uref{http://www.sospubs.co.uk/sos/nov99/articles/synthsecrets.htm,,Part07}
-	@uref{http://www.sospubs.co.uk/sos/dec99/articles/synthsecrets.htm,,Part08}
+	@uref{http://www.soundonsound.com/sos/may99/articles/synthsec.htm,,Part01}
+	@uref{http://www.soundonsound.com/sos/jun99/articles/synthsecrets.htm,,Part02}
+	@uref{http://www.soundonsound.com/sos/jul99/articles/synthsecrets.htm,,Part03}
+	@uref{http://www.soundonsound.com/sos/aug99/articles/synthsecrets.htm,,Part04}
+	@uref{http://www.soundonsound.com/sos/sep99/articles/synthsecrets.htm,,Part05}
+	@uref{http://www.soundonsound.com/sos/oct99/articles/synthsecrets.htm,,Part06}
+	@uref{http://www.soundonsound.com/sos/nov99/articles/synthsecrets.htm,,Part07}
+	@uref{http://www.soundonsound.com/sos/dec99/articles/synthsecrets.htm,,Part08}
 @item Synth Secrets 2000:
-	@uref{http://www.sospubs.co.uk/sos/jan00/articles/synthsecrets.htm,,Part09}
-	@uref{http://www.sospubs.co.uk/sos/feb00/articles/synthsecrets.htm,,Part10}
-	@uref{http://www.sospubs.co.uk/sos/mar00/articles/synthsecrets.htm,,Part11}
-	@uref{http://www.sospubs.co.uk/sos/apr00/articles/synthsecrets.htm,,Part12}
-	@uref{http://www.sospubs.co.uk/sos/may00/articles/synth.htm,,Part13}
-	@uref{http://www.sospubs.co.uk/sos/jun00/articles/synthsec.htm,,Part14}
-	@uref{http://www.sospubs.co.uk/sos/jul00/articles/synthsec.htm,,Part15}
-	@uref{http://www.sospubs.co.uk/sos/aug00/articles/synthsec.htm,,Part16}
-	@uref{http://www.sospubs.co.uk/sos/sep00/articles/synthsec.htm,,Part17}
-	@uref{http://www.sospubs.co.uk/sos/oct00/articles/synthsec.htm,,Part18}
-	@uref{http://www.sospubs.co.uk/sos/nov00/articles/synthsec.htm,,Part19}
-	@uref{http://www.sospubs.co.uk/sos/dec00/articles/synthsec.asp,,Part20}
+	@uref{http://www.soundonsound.com/sos/jan00/articles/synthsecrets.htm,,Part09}
+	@uref{http://www.soundonsound.com/sos/feb00/articles/synthsecrets.htm,,Part10}
+	@uref{http://www.soundonsound.com/sos/mar00/articles/synthsecrets.htm,,Part11}
+	@uref{http://www.soundonsound.com/sos/apr00/articles/synthsecrets.htm,,Part12}
+	@uref{http://www.soundonsound.com/sos/may00/articles/synth.htm,,Part13}
+	@uref{http://www.soundonsound.com/sos/jun00/articles/synthsec.htm,,Part14}
+	@uref{http://www.soundonsound.com/sos/jul00/articles/synthsec.htm,,Part15}
+	@uref{http://www.soundonsound.com/sos/aug00/articles/synthsec.htm,,Part16}
+	@uref{http://www.soundonsound.com/sos/sep00/articles/synthsec.htm,,Part17}
+	@uref{http://www.soundonsound.com/sos/oct00/articles/synthsec.htm,,Part18}
+	@uref{http://www.soundonsound.com/sos/nov00/articles/synthsec.htm,,Part19}
+	@uref{http://www.soundonsound.com/sos/dec00/articles/synthsec.asp,,Part20}
 @item Synth Secrets 2001:
-	@uref{http://www.sospubs.co.uk/sos/jan01/articles/synthsec.asp,,Part21}
-	@uref{http://www.sospubs.co.uk/sos/feb01/articles/synthsecrets.asp,,Part22}
-	@uref{http://www.sospubs.co.uk/sos/mar01/articles/synthsec.asp,,Part23}
-	@uref{http://www.sospubs.co.uk/sos/apr01/articles/synthsecrets.asp,,Part24}
-	@uref{http://www.sospubs.co.uk/sos/may01/articles/synthsecrets.asp,,Part25}
-	@uref{http://www.sospubs.co.uk/sos/jun01/articles/synthsecrets.pt26.asp,,Part26}
-	@uref{http://www.sospubs.co.uk/sos/jul01/articles/synthsec.asp,,Part27}
-	@uref{http://www.sospubs.co.uk/sos/aug01/articles/synthsecrets28.asp,,Part28}
-	@uref{http://www.sospubs.co.uk/sos/sep01/articles/synthsecrets29.asp,,Part29}
-	@uref{http://www.sospubs.co.uk/sos/oct01/articles/synthsecrets30.asp,,Part30}
-	@uref{http://www.sospubs.co.uk/sos/nov01/articles/synthsecrets1101.asp,,Part31}
-	@uref{http://www.sospubs.co.uk/sos/dec01/articles/synthsecrets1201.asp,,Part32}
+	@uref{http://www.soundonsound.com/sos/jan01/articles/synthsec.asp,,Part21}
+	@uref{http://www.soundonsound.com/sos/feb01/articles/synthsecrets.asp,,Part22}
+	@uref{http://www.soundonsound.com/sos/mar01/articles/synthsec.asp,,Part23}
+	@uref{http://www.soundonsound.com/sos/apr01/articles/synthsecrets.asp,,Part24}
+	@uref{http://www.soundonsound.com/sos/may01/articles/synthsecrets.asp,,Part25}
+	@uref{http://www.soundonsound.com/sos/jun01/articles/synthsecrets.pt26.asp,,Part26}
+	Broken @c Broken: @uref{http://www.soundonsound.com/sos/jul01/articles/synthsec.asp,,Part27}
+	@uref{http://www.soundonsound.com/sos/aug01/articles/synthsecrets28.asp,,Part28}
+	@uref{http://www.soundonsound.com/sos/sep01/articles/synthsecrets29.asp,,Part29}
+	@uref{http://www.soundonsound.com/sos/oct01/articles/synthsecrets30.asp,,Part30}
+	@uref{http://www.soundonsound.com/sos/nov01/articles/synthsecrets1101.asp,,Part31}
+	@uref{http://www.soundonsound.com/sos/dec01/articles/synthsecrets1201.asp,,Part32}
 @item Synth Secrets 2002:
-	@uref{http://www.sospubs.co.uk/sos/jan02/articles/synthsecrets0102.asp,,Part33}
-	@uref{http://www.sospubs.co.uk/sos/feb02/articles/synthsecrets0202.asp,,Part34}
-	@uref{http://www.sospubs.co.uk/sos/mar02/articles/synthsecrets0302.asp,,Part35}
-	@uref{http://www.sospubs.co.uk/sos/apr02/articles/synthsecrets0402.asp,,Part36}
-	@uref{http://www.sospubs.co.uk/sos/may02/articles/synthsecrets0502.asp,,Part37}
-	@uref{http://www.sospubs.co.uk/sos/jun02/articles/synthsecrets0602.asp,,Part38}
-	@uref{http://www.sospubs.co.uk/sos/jul02/articles/synthsecrets0702.asp,,Part39}
-	@uref{http://www.sospubs.co.uk/sos/aug02/articles/synthsecrets0802.asp,,Part40}
-	@uref{http://www.sospubs.co.uk/sos/sep02/articles/synthsecrets09.asp,,Part41}
-	@uref{http://www.sospubs.co.uk/sos/oct02/articles/synthsecrets10.asp,,Part42}
-	@uref{http://www.sospubs.co.uk/sos/nov02/articles/synthsecrets1102.asp,,Part43}
-	@uref{http://www.sospubs.co.uk/sos/dec02/articles/synthsecrets1202.asp,,Part44}
+	@uref{http://www.soundonsound.com/sos/jan02/articles/synthsecrets0102.asp,,Part33}
+	@uref{http://www.soundonsound.com/sos/feb02/articles/synthsecrets0202.asp,,Part34}
+	@uref{http://www.soundonsound.com/sos/mar02/articles/synthsecrets0302.asp,,Part35}
+	@uref{http://www.soundonsound.com/sos/apr02/articles/synthsecrets0402.asp,,Part36}
+	@uref{http://www.soundonsound.com/sos/may02/articles/synthsecrets0502.asp,,Part37}
+	@uref{http://www.soundonsound.com/sos/jun02/articles/synthsecrets0602.asp,,Part38}
+	@uref{http://www.soundonsound.com/sos/jul02/articles/synthsecrets0702.asp,,Part39}
+	@uref{http://www.soundonsound.com/sos/aug02/articles/synthsecrets0802.asp,,Part40}
+	@uref{http://www.soundonsound.com/sos/sep02/articles/synthsecrets09.asp,,Part41}
+	@uref{http://www.soundonsound.com/sos/oct02/articles/synthsecrets10.asp,,Part42}
+	@uref{http://www.soundonsound.com/sos/nov02/articles/synthsecrets1102.asp,,Part43}
+	@uref{http://www.soundonsound.com/sos/dec02/articles/synthsecrets1202.asp,,Part44}
 @item Synth Secrets 2003:
-	@uref{http://www.sospubs.co.uk/sos/jan03/articles/synthsecrets0103.asp,,Part45}
+	@uref{http://www.soundonsound.com/sos/jan03/articles/synthsecrets0103.asp,,Part45}
+	@uref{http://www.soundonsound.com/sos/Feb03/articles/synthsecrets46.asp,,Part46}
+	@uref{http://www.soundonsound.com/sos/Mar03/articles/synthsecrets47.asp,,Part47}
+	@uref{http://www.soundonsound.com/sos/apr03/articles/synthsecrets48.asp,,Part48}
 @end itemize
 
 
