--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,7 @@ Overview of Changes in BEAST/BSE 0.5.5:
 * Support NetBSD sound device names [Ben Collver]
 * Fixed MP3 loader
 * Lots of small MIDI handling fixes
+* Various GUI improvements
 
 Overview of Changes in BEAST/BSE 0.5.4:
 
