--- a/docs/site-download.texi
+++ b/docs/site-download.texi
@@ -3,7 +3,7 @@
 @settitle Downloading BEAST/BSE
 @c %**end of header
 
-@include teximacros.texi
+@include texiutils.texi
 
 @hasbanner{large}
 @navigation{navigation.xml}
