--- a/docs/site-historic.texi
+++ b/docs/site-historic.texi
@@ -3,7 +3,7 @@
 @settitle Historic
 @c %**end of header
 
-@include teximacros.texi
+@include texiutils.texi
 
 @hasbanner{large}
 @navigation{navigation.xml}
