--- a/docs/faq.texi
+++ b/docs/faq.texi
@@ -5,7 +5,7 @@
 @footnotestyle end
 @c %**end of header
 
-@include teximacros.texi
+@include texiutils.texi
 
 @hasbanner{large}
 @navigation{navigation.xml}
