--- a/docs/site-about.texi
+++ b/docs/site-about.texi
@@ -3,7 +3,7 @@
 @settitle About BEAST/BSE
 @c %**end of header
 
-@include teximacros.texi
+@include texiutils.texi
 
 @hasbanner{large}
 @navigation{navigation.xml}
