--- a/docs/site-browse-bse-files.texi
+++ b/docs/site-browse-bse-files.texi
@@ -3,7 +3,7 @@
 @settitle Contributed BEAST/BSE Files
 @c %**end of header
 
-@include teximacros.texi
+@include texiutils.texi
 
 @hasbanner{large}
 @navigation{navigation.xml}
