--- a/docs/site-oldnews.texi
+++ b/docs/site-oldnews.texi
@@ -3,7 +3,7 @@
 @settitle Ancient BEAST/BSE News
 @c %**end of header
 
-@include teximacros.texi
+@include texiutils.texi
 
 @hasbanner{large}
 @navigation{navigation.xml}
