--- a/docs/site-upload-bse-files.texi
+++ b/docs/site-upload-bse-files.texi
@@ -3,7 +3,7 @@
 @settitle Upload BEAST/BSE Files for our Contribution area
 @c %**end of header
 
-@include teximacros.texi
+@include texiutils.texi
 
 @hasbanner{large}
 @navigation{navigation.xml}
