--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,7 @@ Overview of Changes in BEAST/BSE 0.5.5:
 * Fixed MP3 loader
 * Lots of small MIDI handling fixes
 * Various GUI improvements
+* Added manual pages for installed executables
 
 Overview of Changes in BEAST/BSE 0.5.4:
 
