--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Oct  3 19:55:53 2003  Alper Ersoy  <dirt@gtk.org>
+
+	* TODO: removed fixed items.
+
 Fri Oct  3 13:53:29 2003  Tim Janik  <timj@gtk.org>
 
 	* docs/generated/*: generate texiutils.texi instead of version.texi,
