--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 FIXMES:
+- freeverb bypass toggle
 - bse-plugin-generator: Effect->Property structure copies don't work for strings (merely a pointer copy)
 - add facility to add/remove/edit sample search paths at the GUI (and save to rc file)
 - upon project playback-stop, discard all pending events (at least note-on+note-off) on its midi receiver
