--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,10 @@
+Sun Oct  5 08:12:51 2003  Tim Janik  <timj@gtk.org>
+
+	* icons/balance.xcf:
+	* icons/balance.png:
+	* bsebalance.idl: 
+	* bsebalance.cc: new stereo balance/panorama position module.
+
 Sun Sep 21 15:18:00 2003  Tim Janik  <timj@gtk.org>
 
 	* listplugins.sh:
