--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,9 @@
 Overview of Changes in BEAST/BSE 0.5.5:
 
-* New (ported) modules:
-  DavCanyonDelay  - Canyon Echo by David A. Bartold
-  BseMonoKeyboard - Monophonic MIDI Keyboard input module
-  BseBalance      - Stereo panorama position module
+* New (or ported) modules:
+  DavCanyonDelay - Canyon Echo by David A. Bartold
+  BseMidiInput   - Monophonic MIDI Keyboard input module
+  BseBalance     - Stereo panorama position module
 * Implemented ability to use sequencer as modulation source
 * Added support for external MIDI events in song tracks
 * Added .bse file playback facility to bsesh
