--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Sun Oct  5 10:51:06 2003  Tim Janik  <timj@gtk.org>
+
+	* bseamplifier.c: fix property defaults.
+
 Sun Oct  5 08:18:12 2003  Tim Janik  <timj@gtk.org>
 
 	* bsetype.h (sfidl_pspec_Frequency): new pspec creator.
